# tm470-kamino-monitor-evidence

./: .env.example  README.md  pyproject.toml
config/: indicator-definitions.yaml
data/: DATASET.md
data/raw/fixtures/: synthetic-routine.json  synthetic-triggering.json
docs/: evaluation-analysis.md  evaluation-method.md  indicator-rationale.md  literature-evidence-map.md  reproduction-guide.md  risk-register.md  technical-design.md  updated-project-plan.md
outputs/: evaluation-results.csv  test-results.txt
outputs/synthetic-routine/: analysis.csv  analysis.json
outputs/synthetic-triggering/: analysis.csv  analysis.json
scripts/: run_sensitivity.py
src/kamino_monitor/: __init__.py  cli.py  core.py  retrieval.py
tests/: test_cli.py  test_core.py
